  config values.

* Added :confval:`man_show_urls` config value.

* #259: HTML table rows now have even/odd CSS classes to enable
  "Zebra styling".

* #478: Added :rst:dir:`py:decorator` directive to describe decorators.

* #367: Added automatic exclusion of hidden members in inheritance
  diagrams, and an option to selectively enable it.

* #306: Added :event:`env-get-outdated` event.

* #590: Added ``caption`` option to graphviz directives.

* #537: Added :confval:`nitpick_ignore`.

* #437: autodoc now shows values of class data attributes.

* autodoc now supports documenting the signatures of ``functools.partial``
  objects.

* Added :confval:`pngmath_add_tooltips`.

* Section headings in :rst:dir:`only` directives are now correctly
  handled.

* #594: :confval:`trim_doctest_flags` now also removes ``<BLANKLINE>``
  indicators.

* #554: Add theme option ``sidebarwidth`` to the basic theme.

* C++ domain now supports array definitions.


Release 1.0.7 (in development)
==============================

* #572: Show warnings by default when reference labels cannot be
  found.

* #536: Include line number when complaining about missing reference
  targets in nitpicky mode.

* #590: Fix inline display of graphviz diagrams in LaTeX output.

* #589: Build using app.build() in setup command.

* Fix a bug in the inheritance diagram exception that caused base
  classes to be skipped if one of them is a builtin.

* Fix general index links for C++ domain objects.

* #332: Make admonition boundaries in LaTeX output visible.

* #573: Fix KeyErrors occurring on rebuild after removing a file.

* Fix a traceback when removing files with globbed toctrees.

* If an autodoc object cannot be imported, always re-read the
  document containing the directive on next build.

* If an autodoc object cannot be imported, show the full traceback
  of the import error.

* Fix a bug where the removal of download files and images wasn't
  noticed.
